# logging

./: CMakeLists.txt  common.h  default.cpp  default.h  level_t.cpp  level_t.h  logger.cpp  logger.h  makefile  message.cpp  message.h
ext/: filters.cpp  filters.h  history_decorator.cpp  history_decorator.h  ipc.h  sink_decorator.cpp  sink_decorator.h
formatters/: default_message_formatter.cpp  default_message_formatter.h  default_path_formatter.cpp  default_path_formatter.h  message_formatter.cpp  message_formatter.h  path_formatter.cpp  path_formatter.h
sinks/: console_color_sink.cpp  console_color_sink.h  console_sink.cpp  console_sink.h  file_sink.cpp  file_sink.h  message_queue_sink.cpp  message_queue_sink.h  null_sink.cpp  null_sink.h  sink.cpp  sink.h  stderr_color_sink.cpp  stderr_color_sink.h  stderr_sink.cpp  stderr_sink.h  stdout_color_sink.cpp  stdout_color_sink.h  stdout_sink.cpp  stdout_sink.h
sinks/details/: color.cpp  color.h
